--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Gestion de Tâches{% endblock %}</title>
+  
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container mt-4">
+<body class="bg-gray-50 min-h-screen">
+    <div class="container mx-auto mt-4">
         {% block body %}{% endblock %}
     </div>
 </body>
